Nav bar opacity and width fix on mobile

--- a/nav.css
+++ b/nav.css
@@ -16,6 +16,12 @@
   z-index: 10;
 }
 
+@media only screen and (max-width: 600px) {
+  #navbar {
+    opacity: 1;
+  }
+}
+
 /* menu button */
 #nav-toggle {
   position: fixed;
@@ -29,7 +35,6 @@
   color: var(--heading-colour);
 
   opacity: 0.8;
-  background-color: var(--bg-dark);
   background: url(assets/menu-svgrepo-com.svg);
   background-repeat: no-repeat;
   background-position: center;
